# wled-ambilight

./: Cargo.toml  LICENSE  build.rs  config.toml  nc.py  readme.md  resources.rc
src/: color_sender_task.rs  config.rs  main.rs
src/screen/: color_extractor.rs  mod.rs
